trunk/Archive2/f2/c8e8272f74e080/output
main.cpp:23:5: error: expected constructor, destructor, or type conversion before '(' token
 rect(100, 200, 300, 400);
     ^
